[gd_scene load_steps=8 format=3 uid="uid://dl0o41sge0mxd"]

[ext_resource type="Texture2D" uid="uid://0j0t1rbjka5o" path="res://assets/sprits/menu-start-button.jpeg" id="1_x01wa"]
[ext_resource type="Script" uid="uid://btqrsabyf5448" path="res://scripts/mode_1_pre_game_hud.gd" id="1_ynyu2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynyu2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b54i8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2xuc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjh0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qhfl"]
size = Vector2(100, 50)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ynyu2")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 175.0
offset_top = 88.0
offset_right = 315.0
offset_bottom = 135.0
text = "кол-во игроков"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 233.0
offset_top = 120.0
offset_right = 256.0
offset_bottom = 143.0
text = "2"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2(163, 132)
shape = SubResource("RectangleShape2D_ynyu2")

[node name="Label" type="Label" parent="Control/TouchScreenButton"]
offset_left = -3.0
offset_top = -12.0
offset_right = 11.0
offset_bottom = 11.0
text = "-"

[node name="Button" type="Button" parent="Control/TouchScreenButton"]
offset_left = -11.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 11.0

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Control"]
position = Vector2(319, 132)
shape = SubResource("RectangleShape2D_b54i8")

[node name="Label" type="Label" parent="Control/TouchScreenButton2"]
offset_left = -4.0
offset_top = -12.0
offset_right = 36.0
offset_bottom = 11.0
text = "+"

[node name="Button12" type="Button" parent="Control/TouchScreenButton2"]
offset_left = -11.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 11.0

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 174.0
offset_top = 172.0
offset_right = 314.0
offset_bottom = 219.0
text = "кол-во раундов"

[node name="Label" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 237.0
offset_top = 203.0
offset_right = 260.0
offset_bottom = 226.0
text = "2"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control2"]
position = Vector2(164, 214)
shape = SubResource("RectangleShape2D_v2xuc")

[node name="Label2" type="Label" parent="Control2/TouchScreenButton"]
offset_left = -2.0
offset_top = -13.0
offset_right = 12.0
offset_bottom = 10.0
text = "-"

[node name="Button21" type="Button" parent="Control2/TouchScreenButton"]
offset_left = -11.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 11.0

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Control2"]
position = Vector2(318, 217)
shape = SubResource("RectangleShape2D_fjh0h")

[node name="Label" type="Label" parent="Control2/TouchScreenButton2"]
offset_left = -5.0
offset_top = -13.0
offset_right = 35.0
offset_bottom = 10.0
text = "+"

[node name="Button22" type="Button" parent="Control2/TouchScreenButton2"]
offset_left = -11.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 11.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(196, 360)
texture_normal = ExtResource("1_x01wa")
shape = SubResource("RectangleShape2D_2qhfl")

[node name="Button123" type="Button" parent="TouchScreenButton"]
offset_left = -45.0
offset_top = 8.0
offset_right = -15.0
offset_bottom = 36.0

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_right = 24.0
offset_bottom = 21.0

[connection signal="pressed" from="Control/TouchScreenButton/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/TouchScreenButton2/Button12" to="." method="_on_button_12_pressed"]
[connection signal="pressed" from="Control2/TouchScreenButton/Button21" to="." method="_on_button_21_pressed"]
[connection signal="pressed" from="Control2/TouchScreenButton2/Button22" to="." method="_on_button_22_pressed"]
[connection signal="pressed" from="TouchScreenButton/Button123" to="." method="_on_button_123_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
